[gd_scene load_steps=10 format=2]

[ext_resource path="res://Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/orb.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Players/robert.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Weapons/hammer.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 30.0

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[sub_resource type="Animation" id=2]
resource_name = "Slash"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -15 ), Vector2( 25, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0, 90.0, 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "enable_hammer_damage"
}, {
"args": [  ],
"method": "disable_hammer_damage"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walk"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 2, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 60.0

[node name="Player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 1 )
np_sprite = NodePath("Sprite")
np_move_animation_player = NodePath("MoveAnimationPlayer")
np_hammer_animation_player = NodePath("HammerAnimationPlayer")
np_hands_pivot = NodePath("HandsPivot")
np_hands = NodePath("HandsPivot/Hands")
np_hammer_hinge = NodePath("HandsPivot/Hands/HammerHinge")
np_hammer_area = NodePath("HandsPivot/Hands/HammerHinge/HammerArea")
np_orb_hinge = NodePath("HandsPivot/Hands/OrbHinge")
np_orb_sprite = NodePath("HandsPivot/Hands/OrbHinge/OrbSprite")

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HandsPivot" type="Node2D" parent="."]

[node name="Hands" type="Node2D" parent="HandsPivot"]
position = Vector2( 50, 0 )

[node name="HammerHinge" type="Node2D" parent="HandsPivot/Hands"]
scale = Vector2( 2, 2 )

[node name="Sprite" type="Sprite" parent="HandsPivot/Hands/HammerHinge"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="HammerArea" type="Area2D" parent="HandsPivot/Hands/HammerHinge"]
position = Vector2( 7, -6.5 )
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandsPivot/Hands/HammerHinge/HammerArea"]
shape = SubResource( 3 )

[node name="OrbHinge" type="Node2D" parent="HandsPivot/Hands"]
visible = false

[node name="OrbSprite" type="Sprite" parent="HandsPivot/Hands/OrbHinge"]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="HammerAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../HandsPivot/Hands/HammerHinge")
anims/Slash = SubResource( 2 )

[node name="MoveAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Walk = SubResource( 5 )

[node name="PickupArea2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
shape = SubResource( 4 )

[connection signal="body_entered" from="HandsPivot/Hands/HammerHinge/HammerArea" to="." method="_on_HammerArea2D_body_entered"]
[connection signal="area_entered" from="PickupArea2D" to="." method="_on_PickupArea2D_area_entered"]
[connection signal="area_exited" from="PickupArea2D" to="." method="_on_PickupArea2D_area_exited"]
